# binance-dca

./: README.md  main.py  pyproject.toml  requirements.txt
ba_dca/: cli.py  database.py  dca.py  frequency.py  gui.py  order.py
ba_dca/qt/: database.py  gui.py  main.ui  model.py
docs/source/: api.rst  conf.py  index.rst
tests/: test_dca.py  test_frequency.py  test_order.py
