[project]
name = "BA_DCA"
version = "0.0.1"
authors = [
  { name="Ibrahim", email="ibrahim.essam1995@gmail.com" },
]
description = "Python package bto setup DCA orders on binance."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [ 
  "binance-connector",
  "python-dateutil"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"